# small-py

./: .gitignore  pyproject.toml  requirements.txt
app/: datasource.py  google.py  mailer.py  main.py  security.py  test_google.py  test_mailer.py  test_main.py  tutorial.py
app/dao/: mcp.py  otp.py  person.py  session.py  startup.py  test_otp.py
app/elastic/: dao.py  test_dao.py  test_models.py  tester.py
app/endpoints/: authentication.py  helpers.py  mailer.py  mcp.py  person.py  session.py  test_authentication.py  test_mcp.py  test_person.py  test_session.py  thing.py
app/models/: common.py  mcp.py  patterns.py  person.py  session.py  thing.py
app/myredis/: tester.py
