[project]
requires-python = ">= 3.11"
name = "Context.ly"
version = "0.0.1"
dependencies = [
  "annotated-doc==0.0.4",
  "annotated-types==0.7.0",
  "anyio==4.13.0",
  "elasticsearch==9.3.0",
  "fastapi[standard]==0.136.1",
  "idna==3.16",
  "parameterized==0.9.0",
  "pydantic==2.13.4",
  "pydantic_core==2.46.4",
  "pytest==9.0.3",
  "starlette==1.0.1",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0"
]

[tool.fastapi]
entrypoint = "app.main:app"
